--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             </p>
             <div class="ds-button-sec text-center">
-                <a href="#" class="ds-button">Download My Resume</a>
+                <a href="assets/resume.pdf" target="_blank" rel="noopener noreferrer" class="ds-button">Download My Resume</a>
               <a href="https://www.researchgate.net/profile/Isabella-Humphrey-2" class="ds-button">View my Publications</a>
           </div>
         </section>
