--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>I am a Machine Learning Engineer at Analatom, Inc., where I currently serve as the Principal Investigator on over $2M in DoD-funded projects. My work focuses on developing cloud-based AI solutions for defense and aerospace applications. I hold a B.S. in Computer Science from the University of Georgia, where I also worked as a research assistant specializing in computer vision. I’ve authored several published research papers, which you can explore below. I’m passionate about continuous learning and thrive on applying AI to solve real-world problems across new and challenging domains.
+            <p>I am a Machine Learning Engineer at Analatom, Inc., where I currently serve as the Principal Investigator on over $2M in DoD-funded projects. My work focuses on developing cloud-based AI solutions for defense and aerospace applications. I hold a B.S. in Computer Science from the University of Georgia, where I also worked as a research assistant specializing in computer vision. I am currently pursuing my M.S. in Computer Science part-time at Georgia Tech, where I am focusing my studies in Robotics and Perception. I have authored several published research papers, which you can explore below. I’m passionate about continuous learning and thrive on applying AI to solve real-world problems across new and challenging domains.
 
             </p>
             <div class="ds-button-sec text-center">
@@ -123,6 +123,14 @@
               <li>Jupyter Notebooks</li>
             </ul>
           </div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+            <h2 class="ds-heading">Certifications</h2>
+            <ul class="ds-skills-list">
+              <li>CompTIA Security+ (<img src="" alt="" sizes="" srcset="">n progress, expected completion in 03/26)</li>
+              <li href="assets/citiCompletionCertificate_11854240_53554141.pdf">CITI Social and Behavioral Research</li>
+              <li>AWS Certified CloudPractioner (in progress)</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -138,10 +146,10 @@
                 <span class="ds-year">2024 - Present</span>
                 <h3 class="ds-officename">Analatom Inc</h3>
                 <span class="ds-department">Machine Learning Engineer</span>
-                <p>Principal investigator for over $1.5M in Department of Defense SBIR R&D contracts developing cloud -deployed machine learning solutions for USAF aircraft sustainment and enhanced readiness.</p>
+                <p>Principal investigator for over $1.5M in Department of Defense SBIR R&D contracts developing cloud-deployed machine learning solutions for USAF aircraft sustainment and enhanced readiness</p>
                 <ul>
-                  <li>Leading development of a cloud-deployed non-destructive inspection system utilizing computer vision to enable automated defect recognition of surface defects in manufacturing.</li>
-                  <li>Responsible for commercial outreach, which includes identifying and engaging potential clients and partners within the private sector.</li>
+                  <li>Leading development of a cloud-deployed non-destructive inspection system utilizing computer vision to enable automated defect recognition of surface defects in manufacturing</li>
+                  <li>Responsible for commercial outreach, which includes identifying and engaging potential clients and partners within the private sector</li>
                 </ul>
               </section>
             </div>
@@ -151,7 +159,7 @@
                 <h3 class="ds-officename">UCSD Engineers for Exploration (Kastner Research Group/Semmens Lab)</h3>
                 <span class="ds-department">Machine Learning Research Contributor</span>
                 <ul>
-                  <li> Collaborated with the Semmens Lab to collect and analyze video and image data.</li>
+                  <li> Collaborated with the Semmens Lab to collect and analyze video and image data</li>
                   <li>Cloud deployed convolutional deep learning pipelines to determine fish length and volumetric data given RGB-D video data</li>
                 </ul>
               </section>
@@ -174,8 +182,8 @@
                   <h3 class="ds-officename">Google</h3>
                   <span class="ds-department">Computer Science Summer Institute Participant</span>
                   <ul>
-                    <li>Participated in a three week intensive programming institute learning web app development in HTML, CSS, Javascript, Python, and  Google AppEngine at Google.</li>
-                    <li>Worked in a team of three to create an application called What’s That Reference, a custom search engine specifically designed to locate movie quotes, using HTML, CSS, Javascript, Python and Google AppEngine.</li>
+                    <li>Participated in a three week intensive programming institute learning web app development in HTML, CSS, Javascript, Python, and  Google AppEngine at Google</li>
+                    <li>Worked in a team of three to create an application called What’s That Reference, a custom search engine specifically designed to locate movie quotes, using HTML, CSS, Javascript, Python and Google AppEngine</li>
                   </ul>
                 </section>
               </div>
